--- a/reports/TEST-com.tw.biblioteca.LibraryTest.xml
+++ b/reports/TEST-com.tw.biblioteca.LibraryTest.xml
@@ -1,81 +1,86 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<testsuite errors="0" failures="0" hostname="precise64" name="com.tw.biblioteca.LibraryTest" tests="7" time="0.018" timestamp="2015-09-09T18:43:11">
+<testsuite errors="0" failures="0" hostname="INsophiag.local" name="com.tw.biblioteca.LibraryTest" skipped="0" tests="7" time="0.007" timestamp="2015-09-14T06:20:45">
   <properties>
-    <property name="ant.project.invoked-targets" value="coverage" />
-    <property name="java.runtime.name" value="OpenJDK Runtime Environment" />
-    <property name="project.name" value="Biblioteca2" />
-    <property name="sun.boot.library.path" value="/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/amd64" />
-    <property name="java.vm.version" value="24.79-b02" />
-    <property name="ant.library.dir" value="/usr/share/ant/lib" />
-    <property name="ant.version" value="Apache Ant(TM) version 1.8.2 compiled on December 3 2011" />
-    <property name="ant.java.version" value="1.7" />
-    <property name="java.vm.vendor" value="Oracle Corporation" />
-    <property name="java.vendor.url" value="http://java.oracle.com/" />
-    <property name="path.separator" value=":" />
-    <property name="java.vm.name" value="OpenJDK 64-Bit Server VM" />
-    <property name="file.encoding.pkg" value="sun.io" />
-    <property name="user.country" value="US" />
+    <property name="java.vendor" value="Oracle Corporation" />
     <property name="sun.java.launcher" value="SUN_STANDARD" />
-    <property name="sun.os.patch.level" value="unknown" />
-    <property name="java.vm.specification.name" value="Java Virtual Machine Specification" />
-    <property name="user.dir" value="/vagrant/IdeaProjects/Biblioteca2" />
-    <property name="java.runtime.version" value="1.7.0_79-b14" />
-    <property name="java.awt.graphicsenv" value="sun.awt.X11GraphicsEnvironment" />
-    <property name="basedir" value="/vagrant/IdeaProjects/Biblioteca2" />
-    <property name="java.endorsed.dirs" value="/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/endorsed" />
-    <property name="os.arch" value="amd64" />
-    <property name="ant.project.default-target" value="coverage" />
-    <property name="java.io.tmpdir" value="/tmp" />
-    <property name="ant.core.lib" value="/usr/share/ant/lib/ant.jar" />
-    <property name="line.separator" value="&#xa;" />
+    <property name="sun.management.compiler" value="HotSpot 64-Bit Tiered Compilers" />
+    <property name="os.name" value="Mac OS X" />
+    <property name="sun.boot.class.path" value="/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib/resources.jar:/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib/rt.jar:/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib/sunrsasign.jar:/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib/jsse.jar:/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib/jce.jar:/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib/charsets.jar:/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib/jfr.jar:/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/classes" />
+    <property name="user.country.format" value="IN" />
     <property name="java.vm.specification.vendor" value="Oracle Corporation" />
-    <property name="os.name" value="Linux" />
-    <property name="ant.home" value="/usr/share/ant" />
+    <property name="ant.home" value="/usr/local/Cellar/ant/1.9.6/libexec" />
+    <property name="java.runtime.version" value="1.7.0_79-b15" />
+    <property name="package.name" value="com.tw.biblioteca" />
+    <property name="user.name" value="sophiag" />
+    <property name="user.language" value="en" />
+    <property name="sun.boot.library.path" value="/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib" />
+    <property name="ant.project.default-target" value="coverage" />
     <property name="ant.project.name" value="Biblioteca2" />
-    <property name="sun.jnu.encoding" value="ISO-8859-1" />
-    <property name="java.library.path" value="/usr/java/packages/lib/amd64:/usr/lib/x86_64-linux-gnu/jni:/lib/x86_64-linux-gnu:/usr/lib/x86_64-linux-gnu:/usr/lib/jni:/lib:/usr/lib" />
+    <property name="java.version" value="1.7.0_79" />
+    <property name="user.timezone" value="" />
+    <property name="sun.arch.data.model" value="64" />
+    <property name="http.nonProxyHosts" value="local|*.local|169.254/16|*.169.254/16" />
+    <property name="java.endorsed.dirs" value="/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib/endorsed" />
+    <property name="sun.cpu.isalist" value="" />
+    <property name="sun.jnu.encoding" value="UTF-8" />
+    <property name="file.encoding.pkg" value="sun.io" />
+    <property name="file.separator" value="/" />
     <property name="java.specification.name" value="Java Platform API Specification" />
     <property name="java.class.version" value="51.0" />
-    <property name="sun.management.compiler" value="HotSpot 64-Bit Tiered Compilers" />
-    <property name="os.version" value="3.2.0-23-generic" />
-    <property name="package.name" value="com.tw.biblioteca" />
-    <property name="ant.file" value="/vagrant/IdeaProjects/Biblioteca2/build.xml" />
-    <property name="user.home" value="/home/vagrant" />
-    <property name="user.timezone" value="" />
-    <property name="java.awt.printerjob" value="sun.print.PSPrinterJob" />
-    <property name="file.encoding" value="ISO-8859-1" />
-    <property name="java.specification.version" value="1.7" />
-    <property name="user.name" value="vagrant" />
-    <property name="java.class.path" value="/vagrant/IdeaProjects/Biblioteca2/instrumented:/vagrant/IdeaProjects/Biblioteca2/lib/junit-4.12.jar:/vagrant/IdeaProjects/Biblioteca2/lib/hamcrest-core-1.3.jar:/vagrant/IdeaProjects/Biblioteca2/lib/deploy.jar:/vagrant/IdeaProjects/Biblioteca2/lib/system-rules-1.12.0.jar:/vagrant/IdeaProjects/Biblioteca2/lib/mockito-all-1.9.5.jar:/vagrant/IdeaProjects/Biblioteca2/out:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/cobertura-2.1.1-javadoc.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/cobertura-2.1.1-sources.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/cobertura-2.1.1.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-5.0.1.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-analysis-5.0.1.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-commons-5.0.1.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-tree-5.0.1.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-util-5.0.1.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/commons-lang3-3.3.2.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/hamcrest-core-1.3.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/jaxen-1.1.4.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/jetty-6.1.14.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/jetty-util-6.1.14.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/junit-4.11.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/logback-classic-1.0.13.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/logback-core-1.0.13.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/oro-2.0.8.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/servlet-api-2.5-6.1.14.jar:/vagrant/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/slf4j-api-1.7.5.jar:/usr/share/java/ant-launcher-1.8.2.jar:/usr/share/ant/lib/ant.jar:/usr/share/ant/lib/ant-junit.jar:/usr/share/ant/lib/ant-junit4.jar" />
-    <property name="java.vm.specification.version" value="1.7" />
-    <property name="sun.java.command" value="org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner testsfile=/vagrant/IdeaProjects/Biblioteca2/junittestcases4120455411355458415.properties filtertrace=true haltOnError=false haltOnFailure=true formatter=org.apache.tools.ant.taskdefs.optional.junit.SummaryJUnitResultFormatter showoutput=false outputtoformatters=true logfailedtests=true logtestlistenerevents=false formatter=org.apache.tools.ant.taskdefs.optional.junit.XMLJUnitResultFormatter,/vagrant/IdeaProjects/Biblioteca2/reports/IGNORETHIS.xml crashfile=/vagrant/IdeaProjects/Biblioteca2/junitvmwatcher9181648168509267709.properties propsfile=/vagrant/IdeaProjects/Biblioteca2/junit5729202853987369803.properties" />
-    <property name="java.home" value="/usr/lib/jvm/java-7-openjdk-amd64/jre" />
-    <property name="sun.arch.data.model" value="64" />
-    <property name="java.specification.vendor" value="Oracle Corporation" />
-    <property name="user.language" value="en" />
-    <property name="main.name" value="BibliotecaApp" />
-    <property name="awt.toolkit" value="sun.awt.X11.XToolkit" />
+    <property name="user.country" value="US" />
+    <property name="java.home" value="/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre" />
     <property name="java.vm.info" value="mixed mode" />
-    <property name="ant.file.Biblioteca2" value="/vagrant/IdeaProjects/Biblioteca2/build.xml" />
-    <property name="java.version" value="1.7.0_79" />
-    <property name="java.ext.dirs" value="/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/ext:/usr/java/packages/lib/ext" />
-    <property name="sun.boot.class.path" value="/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/resources.jar:/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/rt.jar:/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/sunrsasign.jar:/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/jsse.jar:/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/jce.jar:/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/charsets.jar:/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/rhino.jar:/usr/lib/jvm/java-7-openjdk-amd64/jre/lib/jfr.jar:/usr/lib/jvm/java-7-openjdk-amd64/jre/classes" />
-    <property name="java.vendor" value="Oracle Corporation" />
-    <property name="file.separator" value="/" />
-    <property name="java.vendor.url.bug" value="http://bugreport.sun.com/bugreport/" />
-    <property name="sun.cpu.endian" value="little" />
-    <property name="sun.io.unicode.encoding" value="UnicodeLittle" />
-    <property name="ant.file.type.Biblioteca2" value="file" />
+    <property name="ant.file" value="/Users/sophiag/IdeaProjects/Biblioteca2/build.xml" />
+    <property name="os.version" value="10.10.5" />
+    <property name="path.separator" value=":" />
+    <property name="java.vm.version" value="24.79-b02" />
+    <property name="ant.library.dir" value="/usr/local/Cellar/ant/1.9.6/libexec/lib" />
+    <property name="java.awt.printerjob" value="sun.lwawt.macosx.CPrinterJob" />
+    <property name="sun.io.unicode.encoding" value="UnicodeBig" />
+    <property name="awt.toolkit" value="sun.lwawt.macosx.LWCToolkit" />
+    <property name="socksNonProxyHosts" value="local|*.local|169.254/16|*.169.254/16" />
+    <property name="ftp.nonProxyHosts" value="local|*.local|169.254/16|*.169.254/16" />
+    <property name="user.home" value="/Users/sophiag" />
+    <property name="java.specification.vendor" value="Oracle Corporation" />
+    <property name="java.library.path" value="/Users/sophiag/Library/Java/Extensions:/Library/Java/Extensions:/Network/Library/Java/Extensions:/System/Library/Java/Extensions:/usr/lib/java:." />
+    <property name="java.vendor.url" value="http://java.oracle.com/" />
+    <property name="java.vm.vendor" value="Oracle Corporation" />
+    <property name="gopherProxySet" value="false" />
+    <property name="java.runtime.name" value="Java(TM) SE Runtime Environment" />
+    <property name="sun.java.command" value="org.apache.tools.ant.taskdefs.optional.junit.JUnitTestRunner testsfile=/Users/sophiag/IdeaProjects/Biblioteca2/junittestcases6488846877734264867.properties skipNonTests=false filtertrace=true haltOnError=false haltOnFailure=true formatter=org.apache.tools.ant.taskdefs.optional.junit.SummaryJUnitResultFormatter showoutput=false outputtoformatters=true logfailedtests=true threadid=0 logtestlistenerevents=false formatter=org.apache.tools.ant.taskdefs.optional.junit.XMLJUnitResultFormatter,/Users/sophiag/IdeaProjects/Biblioteca2/reports/IGNORETHIS.xml crashfile=/Users/sophiag/IdeaProjects/Biblioteca2/junitvmwatcher3524129591313560038.properties propsfile=/Users/sophiag/IdeaProjects/Biblioteca2/junit880608267225422616.properties" />
+    <property name="java.class.path" value="/Users/sophiag/IdeaProjects/Biblioteca2/instrumented:/Users/sophiag/IdeaProjects/Biblioteca2/lib/junit-4.12.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/hamcrest-core-1.3.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/deploy.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/system-rules-1.12.0.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/mockito-all-1.9.5.jar:/Users/sophiag/IdeaProjects/Biblioteca2/out:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/cobertura-2.1.1-javadoc.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/cobertura-2.1.1-sources.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/cobertura-2.1.1.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-5.0.1.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-analysis-5.0.1.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-commons-5.0.1.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-tree-5.0.1.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/asm-util-5.0.1.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/commons-lang3-3.3.2.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/hamcrest-core-1.3.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/jaxen-1.1.4.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/jetty-6.1.14.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/jetty-util-6.1.14.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/junit-4.11.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/logback-classic-1.0.13.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/logback-core-1.0.13.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/oro-2.0.8.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/servlet-api-2.5-6.1.14.jar:/Users/sophiag/IdeaProjects/Biblioteca2/lib/cobertura-2.1.1/lib/slf4j-api-1.7.5.jar:/usr/local/Cellar/ant/1.9.6/libexec/lib/ant-launcher.jar:/usr/local/Cellar/ant/1.9.6/libexec/lib/ant.jar:/usr/local/Cellar/ant/1.9.6/libexec/lib/ant-junit.jar:/usr/local/Cellar/ant/1.9.6/libexec/lib/ant-junit4.jar" />
+    <property name="ant.version" value="Apache Ant(TM) version 1.9.6 compiled on June 29 2015" />
+    <property name="project.name" value="Biblioteca2" />
+    <property name="java.vm.specification.name" value="Java Virtual Machine Specification" />
     <property name="ant.file.type" value="file" />
-    <property name="sun.cpu.isalist" value="" />
+    <property name="ant.file.Biblioteca2" value="/Users/sophiag/IdeaProjects/Biblioteca2/build.xml" />
+    <property name="java.vm.specification.version" value="1.7" />
+    <property name="sun.cpu.endian" value="little" />
+    <property name="sun.os.patch.level" value="unknown" />
+    <property name="java.io.tmpdir" value="/var/folders/2r/fcbjpg1n6576tfm2dyt49_kh0000gp/T/" />
+    <property name="java.vendor.url.bug" value="http://bugreport.sun.com/bugreport/" />
+    <property name="main.name" value="BibliotecaApp" />
+    <property name="os.arch" value="x86_64" />
+    <property name="java.awt.graphicsenv" value="sun.awt.CGraphicsEnvironment" />
+    <property name="java.ext.dirs" value="/Users/sophiag/Library/Java/Extensions:/Library/Java/JavaVirtualMachines/jdk1.7.0_79.jdk/Contents/Home/jre/lib/ext:/Library/Java/Extensions:/Network/Library/Java/Extensions:/System/Library/Java/Extensions:/usr/lib/java" />
+    <property name="ant.file.type.Biblioteca2" value="file" />
+    <property name="user.dir" value="/Users/sophiag/IdeaProjects/Biblioteca2" />
+    <property name="line.separator" value="&#xa;" />
+    <property name="java.vm.name" value="Java HotSpot(TM) 64-Bit Server VM" />
+    <property name="basedir" value="/Users/sophiag/IdeaProjects/Biblioteca2" />
+    <property name="ant.java.version" value="1.7" />
+    <property name="ant.core.lib" value="/usr/local/Cellar/ant/1.9.6/libexec/lib/ant.jar" />
+    <property name="file.encoding" value="UTF-8" />
+    <property name="java.specification.version" value="1.7" />
+    <property name="ant.project.invoked-targets" value="coverage" />
   </properties>
   <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldNotDisplayCheckedOutBooks" time="0.0" />
   <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldReturnTrueIfSuccessfullyReturned" time="0.0" />
   <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldReturnFalseIfFailedToReturn" time="0.0" />
-  <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldDisplayListOfBookInformation" time="0.0" />
-  <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldAgainDisplayReturnedBooks" time="0.001" />
-  <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldReturnTrueIfSuccessfullyIssued" time="0.0" />
-  <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldReturnFalseIfFailedToIssue" time="0.001" />
+  <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldDisplayListOfBookInformation" time="0.001" />
+  <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldAgainDisplayReturnedBooks" time="0.0" />
+  <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldReturnTrueIfSuccessfullyIssued" time="0.001" />
+  <testcase classname="com.tw.biblioteca.LibraryTest" name="shouldReturnFalseIfFailedToIssue" time="0.0" />
   <system-out><![CDATA[]]></system-out>
   <system-err><![CDATA[]]></system-err>
 </testsuite>
