--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9433962264150944" branch-rate="0.8387096774193549" lines-covered="100" lines-valid="106" branches-covered="26" branches-valid="31" complexity="2.3" version="2.1.1" timestamp="1442213815775">
+<coverage line-rate="0.9622641509433962" branch-rate="0.8709677419354839" lines-covered="102" lines-valid="106" branches-covered="27" branches-valid="31" complexity="2.3" version="2.1.1" timestamp="1442214838799">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9433962264150944" branch-rate="0.8387096774193549" complexity="2.3">
+		<package name="com.tw.biblioteca" line-rate="0.9622641509433962" branch-rate="0.8709677419354839" complexity="2.3">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6363636363636364" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -306,24 +306,24 @@
 						<line number="32" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="0.9047619047619048" branch-rate="0.6666666666666666" complexity="2.5">
+				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="1.0" branch-rate="0.8333333333333334" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="8" branch="false"/>
-								<line number="12" hits="8" branch="false"/>
-								<line number="13" hits="8" branch="false"/>
-								<line number="14" hits="8" branch="false"/>
-								<line number="15" hits="8" branch="false"/>
-								<line number="16" hits="8" branch="false"/>
-								<line number="17" hits="8" branch="false"/>
+								<line number="10" hits="9" branch="false"/>
+								<line number="12" hits="9" branch="false"/>
+								<line number="13" hits="9" branch="false"/>
+								<line number="14" hits="9" branch="false"/>
+								<line number="15" hits="9" branch="false"/>
+								<line number="16" hits="9" branch="false"/>
+								<line number="17" hits="9" branch="false"/>
 							</lines>
 						</method>
 						<method name="chosenOption" signature="()I" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="28" hits="8" branch="false"/>
-								<line number="30" hits="8" branch="false"/>
-								<line number="31" hits="8" branch="false"/>
+								<line number="28" hits="7" branch="false"/>
+								<line number="30" hits="7" branch="false"/>
+								<line number="31" hits="7" branch="false"/>
 								<line number="32" hits="1" branch="false"/>
 								<line number="33" hits="1" branch="false"/>
 							</lines>
@@ -340,32 +340,32 @@
 								<line number="24" hits="5" branch="false"/>
 							</lines>
 						</method>
-						<method name="isChoiceValid" signature="(I)Z" line-rate="0.6" branch-rate="0.75" complexity="0">
+						<method name="isChoiceValid" signature="(I)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="39" hits="12" branch="true" condition-coverage="50% (1/2)">
+								<line number="39" hits="22" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
-										<condition number="0" type="jump" coverage="50%"/>
+										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="40" hits="12" branch="true" condition-coverage="100% (2/2)">
+								<line number="40" hits="20" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="41" hits="5" branch="false"/>
-								<line number="43" hits="0" branch="false"/>
-								<line number="44" hits="0" branch="false"/>
+								<line number="43" hits="2" branch="false"/>
+								<line number="44" hits="2" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="8" branch="false"/>
-						<line number="12" hits="8" branch="false"/>
-						<line number="13" hits="8" branch="false"/>
-						<line number="14" hits="8" branch="false"/>
-						<line number="15" hits="8" branch="false"/>
-						<line number="16" hits="8" branch="false"/>
-						<line number="17" hits="8" branch="false"/>
+						<line number="10" hits="9" branch="false"/>
+						<line number="12" hits="9" branch="false"/>
+						<line number="13" hits="9" branch="false"/>
+						<line number="14" hits="9" branch="false"/>
+						<line number="15" hits="9" branch="false"/>
+						<line number="16" hits="9" branch="false"/>
+						<line number="17" hits="9" branch="false"/>
 						<line number="20" hits="5" branch="false"/>
 						<line number="22" hits="5" branch="false"/>
 						<line number="23" hits="5" branch="true" condition-coverage="50% (1/2)">
@@ -374,24 +374,24 @@
 							</conditions>
 						</line>
 						<line number="24" hits="5" branch="false"/>
-						<line number="28" hits="8" branch="false"/>
-						<line number="30" hits="8" branch="false"/>
-						<line number="31" hits="8" branch="false"/>
+						<line number="28" hits="7" branch="false"/>
+						<line number="30" hits="7" branch="false"/>
+						<line number="31" hits="7" branch="false"/>
 						<line number="32" hits="1" branch="false"/>
 						<line number="33" hits="1" branch="false"/>
-						<line number="39" hits="12" branch="true" condition-coverage="50% (1/2)">
+						<line number="39" hits="22" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
-								<condition number="0" type="jump" coverage="50%"/>
+								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="40" hits="12" branch="true" condition-coverage="100% (2/2)">
+						<line number="40" hits="20" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="41" hits="5" branch="false"/>
-						<line number="43" hits="0" branch="false"/>
-						<line number="44" hits="0" branch="false"/>
+						<line number="43" hits="2" branch="false"/>
+						<line number="44" hits="2" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.8" complexity="3.0">
